--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "scrollreveal": "^4.0.9",
-    "styled-components": "^6.1.12"
+    "styled-components": "^6.1.12",
+    "swiper": "^11.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
